@@ -3,10 +3,18 @@
  <head>
   <script src='jquery'></script>
   <meta http-equiv="Content-Type" content="text/html">
+  <link rel="stylesheet" type="text/css" href="https://www.msu.edu/~keifcame/style.css">
  </head>
  <body>
+    <div id="page">
+        <div id="header">
+            <h1>Image Upload App</h1>
+            <h2>Brandon Sartele<h2>
+        </div>
 {% block content %}
 {% endblock %}
+    </div>
+    <div id="footer"></div>
  </body>
 </html>
 
