@@ -2,8 +2,10 @@
 
 {% block content %}
 
-<h2>Here are all of the images that have been uploaded!</h2>
-(most recently uploaded first)
+<div class="contentTitle">
+    <a href="/" >Return to Home Page</a><br>
+<h1>Here are all of the images that have been uploaded!</h1>
+</div>
 <div id="imageContainer">
 </div>
 <script type="text/javascript">
