@@ -2,13 +2,14 @@
 
 {% block content %}
 
-{{ welcome_message }}<br><br>
-
-<a href='upload'>Upload an image</a> <br>
-<a href='upload2'>Upload an image ver2</a> <br>
-<a href='image'>Show most recent image</a> <br>
-<a href='image_list'>All images</a> <br>
-<a href='login'>Account Management</a><br>
-<hr>
-<img width=40% src='image_raw'/>
+<div class ="contentText">
+    {{ welcome_message }}<br><br>
+    <a href='upload'>Upload an image</a> <br>
+    <a href='upload2'>Upload an image ver2</a> <br>
+    <a href='image'>Show most recent image</a> <br>
+    <a href='image_list'>All images</a> <br>
+    <a href='login'>Account Management</a><br>
+    <hr>
+    <img width=40% src='image_raw'/>
+</div>
 {% endblock %}
