@@ -2,10 +2,11 @@
 
 {% block content %}
 
+<div class="contentText">
 <b> Congratulations you have successfully logged in as: </b>
 
 {{ username }} {{ password }}
 
 <a href="/" >Return to Home Page</a>
-
+</div>
 {% endblock %}
