@@ -1,11 +1,48 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="contentText">
 Upload an image (jpg, png, or tif) (other version):
 
-<form enctype='multipart/form-data' action='upload2_receive' method='POST'>
+<form id='form' enctype='multipart/form-data' action='upload_receive' method='POST'>
 Filename: <input type='file' name='file'><p>
-<input type='submit'>
+<input type='submit'><br>
 </form>
+<a href="/" >Return to Home Page</a>
+
+<div id='success', style="display:none">Image successfully uploaded. Nice.</div>
+<div id='failure', style="display:none">Image upload failed. Oh dear. Please try again!</div>
+<img id='image' src=''/>
+</div>
+
+<script type='text/javascript'>
+$(document).ready(function(e) {
+
+  $("#form").on('submit', (function(e) {
+    e.preventDefault();
+    var formData = new FormData(this);
+
+    $.ajax({
+      type:'POST',
+      url:$(this).attr('action'),
+      data:formData,
+      cache:false,
+      contentType:false,
+      processData:false,
+      success:function(data) {
+        console.log('success!');
+        $('#success').fadeIn()
+        $('#image').attr('src', '/image_raw?special=latest')
+        $('#image').attr('style', 'max-height:400px')
+
+      },
+      error:function(data) {
+        console.log('error!');
+        $('#failure').fadeIn()
+      }
+    });
+  }));
+});
+</script>
 
 {% endblock %}
