@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<a href="/" >Return to Home Page</a>
 Here is your image:
 <p>
 <img width=40% src='image_raw?special=latest'/>
